[tool.poetry]
name = "blinktrade-cli"
version = "0.1.0"
description = "BlinkTrade client"
authors = ["Rodrigo Souza <r@blinktrade.com>"]
readme = "README.md"
homepage = "https://github.com/blinktrade/blinktrade-cli"
license="GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
requests = "~2.28.1"
fire = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blinktrade-cli = "blinktrade_cli.main:main"
